--- a/templates/instructions/instruct-ready.html
+++ b/templates/instructions/instruct-ready.html
@@ -4,14 +4,26 @@
 
     <hr />
 
-    <div class="instructions well">
+    <div class="instructions well"> 
 
         <p>
-            This is the last page
+            This is a two stage game and each stage will take roughly the same amount of time (~3.5 minutes). The first stage will be described now and the second stage will be described upon completion of the first stage. 
+        </p>
+
+        <p>
+            In the first stage, you will see squares in a grid to get points. You will start with a 7 x 7 grid of mostly red or blue squares. There will be one <b>grey</b> square.
         </p>
         
         <p>
-            You're going to start experiment now
+            Your job will be to determine whether the grey square should be <b>red</b> or <b>blue</b>. To do this, you will either press your <b>"r"</b> (for red) or your <b>"b"</b> (for blue) key. Your answer is final when you release your finger from the key. 
+        </p>
+
+        <p>
+            After each key press, you will be given feedback (correct or incorrect) and the next board will load. If you get the answer wrong, the next board will take slightly longer to load, so it is in your best interest to get the correct answers to finish faster. Try to use all the non-grey tiles within the current grid as well as the pattern across grids as clues for what the correct answer will be. 
+        </p>
+
+        <p>
+            There are a total of <b>50</b> grids you have to complete. When you are ready, click the button to start the experiment. 
         </p>
 
 
@@ -26,19 +38,19 @@
     <div class="instructionsnav">
         <div class="row">
             <div class="col-xs-2">
-            	<!--  Maybe not previous button on this screen? -->
-            	<!--
+                <!--  Maybe not previous button on this screen? -->
+                <!--
                 <button type="button" id="next" value="next" class="btn btn-primary btn-lg previous">
                 <span class="glyphicon glyphicon-arrow-left"></span> Previous
                 </button>
-            	-->
+                -->
             </div>
             <div class="col-xs-8">
-            	<center>
-	                <button type="button" id="next" value="next" class="btn btn-success btn-lg continue">
-	                Begin experiment <span class="glyphicon glyphicon-arrow-right"></span>
-	                </button>
-	            </center>
+                <center>
+                    <button type="button" id="next" value="next" class="btn btn-success btn-lg continue">
+                    Begin game <span class="glyphicon glyphicon-arrow-right"></span>
+                    </button>
+                </center>
             </div>
             <div class="col-xs-2">
 
