--- a/templates/instructions/instruct-readytext.html
+++ b/templates/instructions/instruct-readytext.html
@@ -6,13 +6,11 @@
 
     <div class="instructions well">
 
-        <p>
-            This is the third page of instructions
-        </p>
+       
 
         <p>
-            Put some text in this paragraph
-        </p>
+        <b>There are a total of <i>120</i> games you have to complete. You can take a break every 10 games. When you are ready, click the button to start the experiment. </b>
+        </p>  
 
 
         <script type="text/javascript">
@@ -27,15 +25,18 @@
         <div class="row">
             <div class="col-xs-2">
                 <button type="button" id="prev" value="prev" class="btn btn-primary btn-lg previous">
-                <span class="glyphicon glyphicon-arrow-left"></span> Previous
+                    <span class="glyphicon glyphicon-arrow-left"></span> Previous
                 </button>
             </div>
             <div class="col-xs-8">
+                <center>
+                    <button type="button" id="next" value="next" class="btn btn-success btn-lg continue">
+                    Begin game <span class="glyphicon glyphicon-arrow-right"></span>
+                    </button>
+                </center>
             </div>
             <div class="col-xs-2">
-                <button type="button" id="next" value="next" class="btn btn-primary btn-lg continue">
-                Next <span class="glyphicon glyphicon-arrow-right"></span>
-                </button>
+
             </div>
         </div>
     </div>
