--- a/templates/error.html
+++ b/templates/error.html
@@ -1,71 +1,56 @@
-
 <!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <title>Tile Game - Error</title>
+        <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css" />
+        <link rel="stylesheet" href="/static/css/style.css" type="text/css" />
+    </head>
+    <body>
+        <div id="container-error">
 
-<html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>Error</title>
-    <link rel="Favicon" href="static/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="static/css/general.css" media="screen" />
-  </head>
+            <div id="error">
+                <h1>Sorry, there was an error</h1>
+                <hr />
 
-  <body>
-    <div class="slide">
-      <h1>The experiment encountered an error!</h1>
-      <div class="blue">
-        {% if errornum == 1008 %}
+                <div class="alert alert-danger">
+                {% if errornum == 1008 %}
+                    
+                        <p>Sorry, our records indicate that you have attempted to complete this HIT, but quit before finishing.</p>
+                        <p>Because this is a Psychology experiment, you can only complete this HIT once.</p>
+                        <p>Please return the HIT so someone else can perform the experiment.</p>
 
-        <p><b>Sorry, our records indicate that you have attempted to
-        complete this hit, but quit before finishing.</b></p>
+                {% elif errornum == 1010 %}
 
-        <p>Because this is a Psychology experiment, you can only
-        complete this hit once.</p>
+                        <p>Sorry, our records indicate that you have already completed (or attempted to complete) this HIT.</p>
+                        <p>Because this is a Psychology experiment, you can only complete this HIT once.</p>
+                        <p>Please release the HIT so someone else can perform the experiment.</p>
 
-        <p>Please release the hit so someone else can perform the
-        experiment.</p>
+                {% else %}
 
-        {% elif errornum == 1010 %}
+                        <p>Sorry, there was an unexpected error in our processing of your HIT.</p>
 
-        <h2>
-          Sorry, our records indicate that you have already completed (or
-          attempted to complete) this hit.
-        </h2>
-        <p>Because this is a Psychology experiment, you can only complete
-        this hit once.</p>
+                {% endif %}
+                        <p>
+                            If you would like to receive partial compensation or feel you
+                            have reached this page in error, please email
+                            <a href="mailto:{{contact_address}}">{{contact_address}}</a>
+                            and send the following information:
+                        </p>
+                        <hr />
+                        <p>
+                            <b>Error</b>: {{ errornum }}<br />
+                            <b>Description</b>: {{ errordesc }}<br />
+                            {% if hitId %}<b>HITId</b>: #{{ hitId }}<br /> {% endif %}
+                            {% if assignId %}<b>AssignmentId</b>: #{{ assignId }}<br /> {% endif %}
+                            {% if workerId %}<b>WorkerId</b>: #{{ workerId }}<br /> {% endif %}
+                        </p>
 
-        <p>Please release the hit so someone else can perform the
-        experiment.</p>
+                </div>
 
-        {% elif errornum == 1014 %}
-        <h2>Sorry, it looks like you're not using an allowed browser or device</h2>
-        <p>You cannot complete this HIT using a mobile device or Internet Explorer.</p>
-
-        {% else %}
-
-        <h2>
-          Sorry, there was an unexpected error in our processing of your
-          hit.
-        </h2>
-
-        {% endif %}
-
-        <p>If you would like to receive partial compensation or feel you
-        have reached this page in error, please email
-        us
-        <!-- at <a href="mailto:Excellent@Bodcaious.edu">Excellent@Bodcaious.edu</a> -->
-        and send the following information:</p>
-
-        <div id="error-message">
-          <p>
-            Error: {{ errornum }}<br />
-            {% if hitId %} HitID: {{ hitId[0] }}<br /> {% endif %}
-            {% if assignId %} AssignId: {{ assignId }}<br /> {% endif %}
-            {% if workerId %} WorkerId: {{ workerId[0] }}<br /> {% endif %}
-          </p>
+                <hr />
+                <h3>Our sincere apologies!</h3>
+            </div>
         </div>
-        <p>
-          Our sincere apologies!
-        </p>
-      </div>
-    </div>
-  </body>
+    </body>
 </html>
