--- a/templates/postquestionnaire.html
+++ b/templates/postquestionnaire.html
@@ -3,7 +3,7 @@
 
     <hr />
 
-    <p>You are finished!  Thank you for your contributions to science. You will be eligible for full payment once you answer the following questions.</p>
+    <p>You are finished!  Thank you for your contributions to science. You will be eligible for full payment once you answer the following questions. Please provide your feedback about the task below.</p>
 
     <div class="instructions well">
 
@@ -13,7 +13,7 @@
             <!-- beginning of a question -->
             <div class="row question">
                 <div class="col-md-8">
-                    On a scale of 1-10 (where 10 is the most engaged), please rate how <b>ENGAGING</b> you found the learning task:
+                    On a scale of 1-10 (where 10 is the most engaged), please rate how <b>ENGAGING</b> you found the game:
                 </div>
                 <div class="col-md-4">
                     <select id="engagement" name="engagement">
@@ -37,7 +37,7 @@
             <!-- beginning of a question -->
             <div class="row question">
                 <div class="col-md-8">
-                    On a scale of 1-10 (where 10 is the most difficult), please rate how <b>DIFFICULT</b> you found the learning task:
+                    On a scale of 1-10 (where 10 is the most difficult), please rate how <b>DIFFICULT</b> you found the game:
                 </div>
                 <div class="col-md-4">
                     <select id="difficulty" name="difficulty">
@@ -53,6 +53,17 @@
                         <option value="1">1</option>
                         <option value="0">0 - Not difficult at all</option>
                     </select>
+                </div>
+            </div>
+            <!-- end of a question -->
+
+             <!-- beginning of a question -->
+            <div class="row question">
+                <div class="col-md-8">
+                    Provide any further comments you have. 
+                </div>
+                <div class="col-md-4">
+                    <textarea id="comments" rows="10" cols="80" value=""></textarea>
                 </div>
             </div>
             <!-- end of a question -->
