--- a/templates/thanks-mturksubmit.html
+++ b/templates/thanks-mturksubmit.html
@@ -1,5 +1,5 @@
 <html><head>
-        <title>Psychology Experiment - Thanks</title>
+        <title>Tile Game - Thanks</title>
         <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css">
         <link rel="stylesheet" href="/static/css/style.css" type="text/css">
         <script src="/static/lib/jquery-min.js" type="text/javascript"> </script>
@@ -13,8 +13,8 @@
                     type: "GET",
                     url: "/worker_submitted?uniqueId={{ workerid }}:{{ assignmentid }}",
                     success: function (data) {
-                        $( "#mturk_form" ).submit();
                         $(window).off('beforeunload');
+                        $( "#mturk_form" ).submit();
                     }
                 });
             };
