--- a/templates/finishprolific.html
+++ b/templates/finishprolific.html
@@ -1,13 +1,28 @@
-<div style= id="prolific-complete" class='jspsych-display-element'>
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <title>Returning to Prolific</title>
+        <meta charset="utf-8">
+        <link rel="Favicon" href="static/favicon.ico" />
+        <link rel=stylesheet href="static/css/bootstrap.min.css" type="text/css">
+        <link rel=stylesheet href="static/css/style.css" type="text/css">
+        <link rel="stylesheet" href="static/lib/jspsych-6.0.1/css/jspsych.css" type="text/css"></link>
+    </head>
+    <body>
+      <div style="text-align:center;margin-top:10vh;" id="prolific-complete" class='jspsych-display-element'>
         <h1>Study complete</h1>
 
         <p>
-        Your completion code is <b>3590E49F</b>
-        Click this link to submit<br>
-        <a href=https://app.prolific.co/submissions/complete?cc=3590E49F>  
-            https://app.prolific.co/submissions/complete?cc=3590E49F
-        </a>
+          Your completion code is <b>CITBBJYS</b>
+        </p>
         <p>
-        If you have problems submitting, please contact 
-        <a href="mailto:cocosci-lab@princeton.edu">cocosci-lab@princeton.edu</a>
-    </div> 
+          <a href=https://app.prolific.co/submissions/complete?cc=CITBBJYS class="btn btn-success">
+            Submit Completion Code</a>
+        </p>
+        <p>
+        If you have problems submitting, please contact
+        <a href="mailto:dorisyu.miao@gmail.com">dorisyu.miao@gmail.com</a>
+        </p>
+    </div>
+    </body>
+</html>
