--- a/templates/instructions/instruct-1.html
+++ b/templates/instructions/instruct-1.html
@@ -46,6 +46,11 @@
             .negative {
                 color: red;
             }
+            .bonus-info {
+                font-weight: bold;
+                color: #2196F3;
+                margin: 10px 0;
+            }
         </style>
     </head>
     <body>
@@ -95,6 +100,7 @@
                     <li>Your goal is to find all +1 symbols while revealing as few -1 symbols as possible.</li>
                     <li>The trial ends when you find all +1 symbols.</li>
                     <li>You will complete 120 trials in total, with breaks every 10 trials.</li>
+                    <li class="bonus-info">For every 100 points you earn, you will receive a $1 bonus on your base payment!</li>
                 </ul>
             </div>
 
